fix(GridPostsLatest): make allPostsLink spacing acurate

--- a/Components/GridPostsLatest/_style.scss
+++ b/Components/GridPostsLatest/_style.scss
@@ -99,11 +99,7 @@
   }
 
   .allPostsLink {
-    padding-top: 2rem;
+    padding-top: calc(var(--component-spacing) / 2);
     text-align: center;
-
-    @media (min-width: $breakpoint-desktop) {
-      padding-top: 3rem;
-    }
   }
 }
